native/tests/snapshots/parse_tests__parse_hpp.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                5,
                "keyword",
            ),
            (
                6,
                9,
                "type",
            ),
            (
                12,
                18,
                "keyword",
            ),
            (
                20,
                23,
                "type",
            ),
            (
                24,
                27,
                "function",
            ),
            (
                29,
                30,
                "delimiter",
            ),
            (
                32,
                33,
                "delimiter",
            ),
            (
                34,
                48,
                "comment",
            ),
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "class_specifier",
            name: "Foo",
            detail: "",
            start_byte: 0,
            end_byte: 32,
            children: [],
        },
    ],
}
