native/tests/snapshots/parse_tests__parse_htm.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                20,
                "comment",
            ),
        ],
        [
            (
                0,
                1,
                "punctuation.bracket",
            ),
            (
                1,
                2,
                "tag",
            ),
            (
                2,
                3,
                "punctuation.bracket",
            ),
            (
                8,
                10,
                "punctuation.bracket",
            ),
            (
                10,
                11,
                "tag",
            ),
            (
                11,
                12,
                "punctuation.bracket",
            ),
        ],
        [],
    ],
    outline: [],
}
