native/tests/snapshots/parse_tests__parse_html.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                21,
                "comment",
            ),
        ],
        [
            (
                0,
                1,
                "punctuation.bracket",
            ),
            (
                1,
                4,
                "tag",
            ),
            (
                5,
                10,
                "attribute",
            ),
            (
                12,
                13,
                "string",
            ),
            (
                14,
                15,
                "punctuation.bracket",
            ),
            (
                17,
                19,
                "punctuation.bracket",
            ),
            (
                19,
                22,
                "tag",
            ),
            (
                22,
                23,
                "punctuation.bracket",
            ),
        ],
        [],
    ],
    outline: [],
}
