native/tests/snapshots/parse_tests__parse_ini.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                14,
                "comment",
            ),
        ],
        [
            (
                0,
                1,
                "punctuation.bracket",
            ),
            (
                1,
                8,
                "type",
            ),
            (
                8,
                9,
                "punctuation.bracket",
            ),
        ],
        [
            (
                0,
                3,
                "property",
            ),
            (
                4,
                5,
                "operator",
            ),
        ],
        [],
    ],
    outline: [],
}
