native/tests/snapshots/parse_tests__parse_java.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                15,
                "comment",
            ),
        ],
        [
            (
                0,
                6,
                "keyword",
            ),
            (
                7,
                12,
                "keyword",
            ),
            (
                13,
                17,
                "type",
            ),
            (
                20,
                26,
                "keyword",
            ),
            (
                27,
                33,
                "keyword",
            ),
            (
                34,
                38,
                "type.builtin",
            ),
            (
                39,
                43,
                "function.method",
            ),
            (
                44,
                50,
                "type",
            ),
            (
                53,
                54,
                "variable",
            ),
            (
                58,
                69,
                "comment",
            ),
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "class_declaration",
            name: "Main",
            detail: "",
            start_byte: 16,
            end_byte: 89,
            children: [
                OutlineNode {
                    kind: "method_declaration",
                    name: "main",
                    detail: "",
                    start_byte: 36,
                    end_byte: 87,
                    children: [],
                },
            ],
        },
    ],
}
