native/tests/snapshots/parse_tests__parse_js.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                13,
                "comment",
            ),
        ],
        [
            (
                0,
                8,
                "keyword",
            ),
            (
                9,
                12,
                "function",
            ),
            (
                12,
                13,
                "punctuation.bracket",
            ),
            (
                13,
                14,
                "punctuation.bracket",
            ),
            (
                15,
                16,
                "punctuation.bracket",
            ),
            (
                17,
                28,
                "comment",
            ),
            (
                29,
                35,
                "keyword",
            ),
            (
                36,
                37,
                "number",
            ),
            (
                37,
                38,
                "punctuation.delimiter",
            ),
            (
                39,
                40,
                "punctuation.bracket",
            ),
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "function_declaration",
            name: "foo",
            detail: "",
            start_byte: 14,
            end_byte: 54,
            children: [],
        },
    ],
}
