native/tests/snapshots/parse_tests__parse_json.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [],
        [
            (
                2,
                7,
                "string.special.key",
            ),
            (
                9,
                16,
                "string",
            ),
            (
                18,
                45,
                "comment",
            ),
        ],
        [],
        [],
    ],
    outline: [],
}
