native/tests/snapshots/parse_tests__parse_kt.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                17,
                "comment",
            ),
        ],
        [
            (
                0,
                3,
                "keyword.function",
            ),
            (
                4,
                8,
                "function",
            ),
            (
                8,
                9,
                "punctuation.bracket",
            ),
            (
                9,
                10,
                "punctuation.bracket",
            ),
            (
                11,
                12,
                "punctuation.bracket",
            ),
        ],
        [
            (
                4,
                11,
                "function",
            ),
            (
                11,
                12,
                "punctuation.bracket",
            ),
            (
                12,
                16,
                "string",
            ),
            (
                16,
                17,
                "punctuation.bracket",
            ),
            (
                19,
                30,
                "comment",
            ),
        ],
        [
            (
                0,
                1,
                "punctuation.bracket",
            ),
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "function_declaration",
            name: "main",
            detail: "",
            start_byte: 18,
            end_byte: 63,
            children: [],
        },
    ],
}
