native/tests/snapshots/parse_tests__parse_kts.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                14,
                "comment",
            ),
        ],
        [
            (
                0,
                7,
                "function",
            ),
            (
                7,
                8,
                "punctuation.bracket",
            ),
            (
                8,
                12,
                "string",
            ),
            (
                12,
                13,
                "punctuation.bracket",
            ),
        ],
        [],
    ],
    outline: [],
}
