native/tests/snapshots/parse_tests__parse_mjs.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                14,
                "comment",
            ),
        ],
        [
            (
                0,
                6,
                "keyword",
            ),
            (
                7,
                12,
                "keyword",
            ),
            (
                13,
                14,
                "variable",
            ),
            (
                15,
                16,
                "operator",
            ),
            (
                17,
                18,
                "number",
            ),
            (
                18,
                19,
                "punctuation.delimiter",
            ),
        ],
        [],
    ],
    outline: [],
}
