native/tests/snapshots/parse_tests__parse_mk.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                14,
                "comment",
            ),
        ],
        [
            (
                0,
                3,
                "constant.macro",
            ),
            (
                3,
                4,
                "punctuation.delimiter",
            ),
        ],
        [],
        [],
    ],
    outline: [],
}
