native/tests/snapshots/parse_tests__parse_php.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                5,
                "tag",
            ),
        ],
        [
            (
                0,
                14,
                "comment",
            ),
        ],
        [
            (
                0,
                5,
                "keyword",
            ),
        ],
        [
            (
                2,
                8,
                "keyword",
            ),
            (
                9,
                17,
                "keyword",
            ),
            (
                18,
                19,
                "function.method",
            ),
            (
                20,
                23,
                "type.builtin",
            ),
            (
                24,
                25,
                "operator",
            ),
            (
                25,
                26,
                "variable",
            ),
            (
                29,
                32,
                "type.builtin",
            ),
            (
                35,
                41,
                "keyword",
            ),
            (
                42,
                43,
                "operator",
            ),
            (
                43,
                44,
                "variable",
            ),
            (
                47,
                48,
                "number",
            ),
        ],
        [],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "class_declaration",
            name: "C",
            detail: "",
            start_byte: 21,
            end_byte: 84,
            children: [
                OutlineNode {
                    kind: "method_declaration",
                    name: "m",
                    detail: "",
                    start_byte: 33,
                    end_byte: 82,
                    children: [],
                },
            ],
        },
    ],
}
